--- a/client/src/component/FolderOut.css
+++ b/client/src/component/FolderOut.css
@@ -1,4 +1,4 @@
-.folder-out{
+/* .folder-out{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,4 +8,4 @@
     border-color: sienna;
     padding: 2%;
     margin: 4px;
-}
+} */
