--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+ 
 }
+/* body{
+  background-color: #f9f9f9;
+} */
 
 .logo {
   height: 6em;
