--- a/client/src/component/Layout.css
+++ b/client/src/component/Layout.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 .layout-head{
     display: flex;
     justify-content: center;
     height: 70px;
     width: 100%;
-    background-color: white;
-    font-size: 1.3rem;
-    font-family: "BioRhyme";
+    color: white;
+    background-color: #1a1a1abb;
+    font-size: 1.1rem;
     box-shadow: 0px 3px 2px rgb(212, 207, 207);
 }
 
@@ -23,17 +24,37 @@
     align-items: center;
 }
 
+.folderImg{
+    height: 20px;
+    width: 20px;
+}
+
 .layout-upload-aria{
     display: flex;
-    justify-content: space-between;
-    width: 280px;
+    justify-content: right;
+    width: 43%;
     align-items: center;
 }
 
 #avatar{
     width: 180px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 #inputFolder{
     width: 105px;
+    font-family: 'Quicksand', sans-serif;
+    /* background-color: rgb(255, 241, 164); */
+    /* border-radius: 5px;
+    border: 1px solid transparent; */
+    /* height: 25px; */
+}
+
+#addFolder{
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6)
+}
+
+
+#head-upload-file{
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6)
 }
