--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  
+  font-family: 'Quicksand', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -14,6 +16,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   
+  
 }
 
 a {
@@ -25,13 +28,14 @@ a:hover {
   color: #535bf2;
 }
 
-/* body {
-  margin: 0;
+body {
+  /* background-color: #f9f9f9; */
+  /* margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
-} */
+  min-height: 100vh; */
+}
 
 h1 {
   font-size: 3.2em;
@@ -44,24 +48,22 @@ button {
   padding: 0.6em 0.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: "BioRhyme";
+  font-family: 'Quicksand', sans-serif;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
  
 }
 button:hover {
-  border-color: #646cff;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6)
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f9f9f9;
+    /* background-color: #ffffff; */
   }
   a:hover {
     color: #747bff;
