--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,26 +43,31 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 0.2em;
+  border-radius: 80px;
+  width: 133px;
+  /* margin: 0px; */
+  /* border: 1px solid transparent; */
+  /* padding: 0.6em 0.2em; */
   font-size: 1em;
-  font-weight: 500;
-  font-family: 'Quicksand', sans-serif;
-  background-color: #1a1a1a;
+  /* font-weight: 500; */
+  /* font-family: 'Quicksand', sans-serif; */
+  /* background-color: #1a1a1a; */
   cursor: pointer;
-  transition: border-color 0.25s;
- 
+  transition:  0.25s;
+  height: 40px;
 }
 button:hover {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6)
+  /* transition: .3s; */
+  width: 150px;
+  /* text-shadow: 0 0 1px #242424; */
+  /* text-shadow: 0px 0px 0px black, 0 0 25px #f9f9f9, 0 0 10px #242424; */
 }
 
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #f9f9f9;
+    background-color: rgba(0, 0, 0, 0.05);
     /* background-color: #ffffff; */
   }
   a:hover {
